# webm_parser

./: .gitignore  CMakeLists.txt  README.libwebm
webm_parser/include/webm/: buffer_reader.h  dom_types.h  element.h  file_reader.h  id.h  istream_reader.h
webm_parser/src/: audio_parser.h  block_header_parser.h  bool_parser.h  buffer_reader.cc  byte_parser.h  date_parser.cc  file_reader.cc  float_parser.cc  id_element_parser.h  id_parser.h  int_parser.h  istream_reader.cc  master_parser.h  master_value_parser.h  segment_parser.cc  skip_parser.h  unknown_parser.h  var_int_parser.h  video_parser.h  webm_parser.cc
